[Feature-API Gateway]: Update Swagger for Api Gateway
