# back-end/api-gateway/internal/handlers/interact_handler.go
@@ -29,7 +29,7 @@ func NewInteractHandler(port string) *InteractHandler {
 //	@Tags			interact
 //	@Accept			json
 //	@Produce		json
-//	@Secure			BearerAuth
+//	@Security			BearerAuth
 //	@Param			request	body		models.LikeRequest	true	"Like Check Request"
 //	@Success		200		{object}	models.SwaggerLikeResp
 //	@Failure		404		{object}	models.ResponseDataType
@@ -65,7 +65,7 @@ func (iH *InteractHandler) CheckLikeHandler(c *gin.Context) {
 //	@Tags			interact
 //	@Accept			json
 //	@Produce		json
-//	@Secure			BearerAuth
+//	@Security			BearerAuth
 //	@Param			request	body		models.LikeRequest	true	"Like Request"
 //	@Success		200		{object}	models.ResponseDataType
 //	@Failure		400		{object}	models.ResponseDataType
@@ -96,7 +96,7 @@ func (iH *InteractHandler) AddLikeHandler(c *gin.Context) {
 //	@Tags			interact
 //	@Accept			json
 //	@Produce		json
-//	@Secure			BearerAuth
+//	@Security			BearerAuth
 //	@Param			request	body		models.LikeRequest	true	"Like Request"
 //	@Success		200		{object}	models.ResponseDataType
 //	@Failure		400		{object}	models.ResponseDataType
@@ -127,7 +127,7 @@ func (iH *InteractHandler) RemoveLikeHandler(c *gin.Context) {
 //	@Tags			interact
 //	@Accept			json
 //	@Produce		json
-//	@Secure			BearerAuth
+//	@Security			BearerAuth
 //	@Param			request	body		models.CommentRequest	true	"Comment Request"
 //	@Success		200		{object}	models.ResponseDataType
 //	@Failure		400		{object}	models.ResponseDataType
@@ -176,11 +176,11 @@ func (iH *InteractHandler) AddCommentHandler(c *gin.Context) {
 //	@Tags			interact
 //	@Accept			json
 //	@Produce		json
-//	@Secure			BearerAuth
+//	@Security			BearerAuth
 //	@Param			id	query		string	true	"Id Request"
-//	@Success		200		{object}	models.ResponseDataType
-//	@Failure		400		{object}	models.ResponseDataType
-//	@Failure		500		{object}	models.ResponseDataType
+//	@Success		200	{object}	models.ResponseDataType
+//	@Failure		400	{object}	models.ResponseDataType
+//	@Failure		500	{object}	models.ResponseDataType
 //	@Router			/api/v1/interact/delete-comment [delete]
 func (iH *InteractHandler) DeleteCommentHandler(c *gin.Context) {
 	server, client, err := repository.PostRepo(iH.port)
@@ -195,8 +195,16 @@ func (iH *InteractHandler) DeleteCommentHandler(c *gin.Context) {
 		return
 	}
 
+	var req models.DeleteCommentReq
+
+	if err := c.ShouldBindJSON(&req); err != nil {
+		models.Response(c, http.StatusBadRequest, err)
+		return
+	}
+
 	input := &api.DeleteCommentReq{
-		Id: c.Query("id"),
+		Id:     req.Id,
+		PostId: req.PostId,
 	}
 
 	_, err = client.DeleteComment(ctx, input)
